# ovrk-input-10112020

./: CMakeLists.txt  Makefile  OpenVR-KeyboardInputOverlay.pro  Readme.md  VRKeyboardInput.sln  run.sh
client_overlay/: CMakeLists.txt  client_overlay.vcxproj  client_overlay.vcxproj.filters
client_overlay/src/: logging.h  main.cpp  mainwindow.cpp  mainwindow.h  overlaycontroller.cpp  overlaycontroller.h
client_overlay/src/domhandmultiplier/: DomHandMultiplier.cpp  DomHandMultiplier.h
client_overlay/src/tabcontrollers/: KeyboardInputTabController.cpp  KeyboardInputTabController.h
driver_vrkeyboardinput/: CMakeLists.txt  Makefile  driver.vrdrivermanifest  driver_vrkeyboardinput.vcxproj
driver_vrkeyboardinput/resources/: driver.vrresources
driver_vrkeyboardinput/resources/input/: legacy_bindings_ovrki_controller.json  ovrki_controller_profile.json
driver_vrkeyboardinput/resources/models/ovrki_controller/: arrow.mtl
driver_vrkeyboardinput/resources/settings/: default.vrsettings
driver_vrkeyboardinput/src/: dllmain.cpp  driver_vrkeyboardinput.cpp  logging.h
driver_vrkeyboardinput/src/com/shm/: driver_ipc_shm.cpp  driver_ipc_shm.h
driver_vrkeyboardinput/src/driver/: ServerDriver.cpp  ServerDriver.h  WatchdogProvider.cpp  WatchdogProvider.h
driver_vrkeyboardinput/src/driver/utils/: DevicePropertyValueVisitor.h
driver_vrkeyboardinput/src/utils/: DevicePropertyValueVisitor.h
driver_vrkeyboardinput/src/virtualdevice/: VirtualController.cpp  VirtualController.h
installer/: installed_files.txt  installer.nsi  listUninstallFiles.sh
lib_vrkeyboardinput/: CMakeLists.txt  Makefile  lib_vrkeyboardinput.vcxproj
lib_vrkeyboardinput/include/: config.h  ipc_protocol.h  openvr_math.h  vrkeyboardinput.h  vrkeyboardinput_types.h
lib_vrkeyboardinput/src/: vrkeyboardinput.cpp
openvr2/: CMakeLists.txt  Toolchain-clang.cmake
openvr2/headers/: openvr_api.json
openvr2/samples 2/: CMakeLists.txt  README.md  samples_vs2017.sln
openvr2/samples 2/driver_sample/: driver_sample.vcxproj
openvr2/samples 2/hellovr_dx12/: hellovr_dx12.vcxproj  hellovr_dx12.vcxproj.filters  hellovr_dx12_main.cpp
openvr2/samples 2/hellovr_opengl/: CMakeLists.txt  hellovr_opengl.vcxproj  hellovr_opengl.vcxproj.filters  hellovr_opengl_main.cpp
openvr2/samples 2/hellovr_vulkan/: CMakeLists.txt  hellovr_vulkan_main.cpp
openvr2/samples 2/helloworldoverlay/: CMakeLists.txt  helloworldoverlay.pro  main.cpp  openvroverlaycontroller.cpp  openvroverlaycontroller.h  overlaywidget.cpp  overlaywidget.h  (+1 more)
(+7 files in other folders)
